--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "date-fns": "^2.0.0-beta.5",
     "material-table": "^1.61.0",
     "ra-data-simple-rest": "^3.5.5",
