--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "react-admin": "^3.6.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
     "react-modal": "^3.11.2",
-    "react-scripts": "3.4.1"
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
